<resources>
    <string name="app_name">GosueSprortsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cerrar_session">Cerrar Sesion</string>

    <string name="menu_home">Menu Principal</string>
    <string name="menu_gallery">Mis Compras</string>
    <string name="menu_slideshow">Mis Reservas</string>
    <string name="varBtnIngresar">Ingresar</string>
    <string name="varTilPasswordHint">Contraseña</string>
    <string name="varTilUsernameHint">Usuario</string>
    <string name="menu_my_details">Mis datos</string>
    <string name="menu_sales">Hacer una compra</string>
    <string name="menu_booking">Registrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="varBtnAñadirCarrito">Añadir al Carrito</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="confirmSaleTitle">Carrito de Compras</string>
    <string name="valBtnConfirmSale">Proceder Compra</string>
    <string name="varTilComputers">Escoge un Ordenador</string>
    <string name="varReservaDate">Fecha y hora</string>
    <string name="varReservaTime">Tiempo</string>
    <string name="varBtnNewBooking">Registrar Reserva</string>
    <string name="menu_booking_history">Historial</string>
    <string name="varTilBookingDate">Fecha</string>
    <string name="varBtnCancelBooking">Cancelar Reserva</string>
    <string name="varBtnPayment">Agregar metodo de pago</string>
    <string name="varCancelPaymentMethod">Cancelar Metodo de pago</string>
    <string name="menu_shop_history">Historial de compras</string>
</resources>