<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_details">

    <fragment
        android:id="@+id/nav_my_details"
        android:name="com.g4.dev.gosuesprortsapp.ui.booking.BookingFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_my_details" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.g4.dev.gosuesprortsapp.ui.shop.ShopFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_compras" />

    <fragment
        android:id="@+id/nav_booking"
        android:name="com.g4.dev.gosuesprortsapp.ui.details.DetailsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_booking" />
</navigation>