<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@drawable/img_login2">


    <ImageView
        android:id="@+id/imgGosue"
        android:layout_width="391dp"
        android:layout_height="244dp"
        android:layout_marginTop="35dp"

        android:layout_marginBottom="26dp"
        android:contentDescription="TODO"
        android:src="@drawable/gamer_app"
        app:layout_constraintBottom_toTopOf="@+id/layoutInputsLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/layoutInputsLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="?attr/textInputOutlinedDenseStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/varTilUsernameHint"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/user_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserameLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:gravity="center"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="?attr/textInputOutlinedDenseStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:hint="@string/varTilPasswordHint"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@+id/til_username"
            app:startIconDrawable="@drawable/password_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:gravity="center"/>


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="180dp"
        android:layout_height="57dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="176dp"
        android:text="@string/varBtnIngresar"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputsLogin"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/pgProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>