<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".ui.details.DetailsFragment"
    >


    <TextView
        android:id="@+id/tvReservaTitle"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="Registrar Reserva"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardForm"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="350dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/common_app_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">



            <Spinner
                android:id="@+id/spComputers"
                android:layout_width="367dp"
                android:layout_height="37dp"
                android:layout_marginTop="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilOdenador" />

            <TextView
                android:id="@+id/tilOdenador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/varTilComputers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.063"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tilActualDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/varReservaDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spComputers" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:text="@string/varReservaTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilActualDate" />

            <Button
                android:id="@+id/btnChooseTime"
                android:layout_width="51dp"
                android:layout_height="45dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                app:icon="@drawable/ic_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <EditText
                android:id="@+id/etTimePicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="144dp"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btnChooseTime"
                app:layout_constraintTop_toBottomOf="@+id/spComputers" />

            <EditText
                android:id="@+id/etDateTime"
                android:layout_width="374dp"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:hint="Escoge La hora"
                android:inputType="datetime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.551"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilActualDate" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="266dp"
        android:layout_height="44dp"
        android:layout_marginTop="61dp"
        android:background="@drawable/rounded_shape"
        android:text="@string/varBtnNewBooking"
        app:icon="@drawable/booking_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardForm" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="402dp"
        android:layout_height="170dp"
        android:layout_marginTop="56dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/game_an" />

</androidx.constraintlayout.widget.ConstraintLayout>