<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shop.confirmShop.ConfirmShopFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/confirmSaleTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#E60606"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recProductsSalecteds"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <View
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintTop_toBottomOf="@id/recProductsSalecteds"
        tools:layout_editor_absoluteX="0dp">


    </View>

    <Button
        android:id="@+id/btnConfirmSale"
        android:layout_width="370dp"
        android:layout_height="75dp"
        android:layout_marginTop="6dp"
        android:text="@string/valBtnConfirmSale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tlSubtotal"
        android:layout_width="113dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Subtotal"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recProductsSalecteds" />

    <TextView
        android:id="@+id/tlIgv"
        android:layout_width="111dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="IGV"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlSubtotal" />

    <TextView
        android:id="@+id/tlTotal"
        android:layout_width="106dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="TOTAL:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlIgv" />

    <TextView
        android:id="@+id/tvSubtotal"
        android:layout_width="158dp"
        android:layout_height="29dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tlSubtotal"
        app:layout_constraintTop_toTopOf="@+id/container" />

    <TextView
        android:id="@+id/tvIgv"
        android:layout_width="156dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/tlIgv"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtotal" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="157dp"
        android:layout_height="27dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tlTotal"
        app:layout_constraintTop_toBottomOf="@+id/tvIgv" />

    <Button
        android:id="@+id/bnAddPayment"
        android:layout_width="284dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/varBtnPayment"
        app:icon="@drawable/ic_credit_card"
        app:iconGravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal" />
</androidx.constraintlayout.widget.ConstraintLayout>